[package]
name = "agri-io-at-commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

atat = { git = "https://github.com/BlackbirdHQ/atat.git", commit = "c5caaf7588c500af35d1c9be4229e47893845864",  default-features=false, features = ["derive", "bytes", "hex_str_arrays", "async"] }
atat_derive = { git = "https://github.com/BlackbirdHQ/atat.git", commit = "c5caaf7588c500af35d1c9be4229e47893845864" }
serde_at = { git = "https://github.com/BlackbirdHQ/atat.git", commit = "c5caaf7588c500af35d1c9be4229e47893845864", default-features=false, features = ["hex_str_arrays"] }

defmt = { version = "0.3", optional = true }

embedded-io = { version = "0.5.0", optional=true }
embedded-io-async = { version = "0.5.0", optional=true, features = ["defmt-03"] }
serde = { version = "1", default-features=false, features = ["derive"] }

heapless = "0.7"

[features]
debug = ["atat/defmt", "defmt"]
async = ["atat/async", "embedded-io"]
default = ["async"]
#default = ["debug", "async"]