[package]
name = "agri-io-at-commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

atat = { version = "0.22.0",  default-features=false, features = ["derive", "bytes", "hex_str_arrays"] }
atat_derive = { version = "0.22.0" }
serde_at = { version = "0.22.0", default-features=false, features = ["hex_str_arrays"] }

defmt = { version = "0.3", optional = true }

embedded-io = { version = "0.6.1", optional=true }
embedded-io-async = { version = "0.6.1", optional=true, features = ["defmt-03"] }
serde = { version = "1", default-features=false, features = ["derive"] }

heapless = "0.8"
postcard = { version = "1", features = ["experimental-derive", "use-defmt", "heapless"] }

[features]
debug = ["atat/defmt", "defmt"]
async = ["embedded-io"]
default = ["async"]
#default = ["debug", "async"]