[package]
name = "agri-io-at-commands"
version = "0.2.33"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

atat = { git = "https://github.com/mvniekerk/atat.git", tag = "v20.2",  default-features=false, features = ["derive", "bytes", "hex_str_arrays", "async"] }
atat_derive = { git = "https://github.com/mvniekerk/atat.git", tag = "v20.2" }
serde_at = { git = "https://github.com/mvniekerk/atat.git", tag = "v20.2", default-features=false, features = ["hex_str_arrays"] }

defmt = { version = "0.3", optional = true }

embedded-io = { version = "0.6.1", optional=true }
embedded-io-async = { version = "0.6.1", optional=true, features = ["defmt-03"] }
serde = { version = "1", default-features=false, features = ["derive"] }

heapless = "0.8"
postcard = { version = "1", features = ["experimental-derive", "use-defmt", "heapless"] }

[dev-dependencies]
defmt = { version = "0.3" }

[features]
debug = ["atat/defmt", "defmt"]
async = ["atat/async", "embedded-io"]
default = ["async"]